# openstrike

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  project.godot
.github/workflows/: ci.yml
addons/goldsrc/: goldsrc.gdextension  goldsrc.gdextension.uid  plugin.cfg  plugin.gd  plugin.gd.uid
addons/goldsrc/importer/: bsp_importer.gd.uid  mdl_importer.gd.uid  spr_importer.gd.uid  wad_importer.gd.uid
apps/client/: CMakeLists.txt  main.cpp
assets_open/: README.md
data/assets/: cs16_pilot_weapon_assets.json
data/config/: viewmodel_world_profile.json
data/cvars/: default.cfg
data/schemas/: coverage_status.schema.json
docs/: 3KLIKSPHILIP_RESEARCH_NOTES.md  ARCHITECTURE.md  ASSET_PIPELINE.md  CODEX_SPEC_GOLDSRC_RUNTIME_SPINE.md  COMMUNICATION_PROTOCOL.md  COMPACT_PR_TASK_PACKETS.md  COVERAGE_STATUS_CONTRACT.md  CS16_ASSET_ORCHESTRATION_ATLAS.md  CS_1_6_FEEL.md  CVARS_AND_CONFIG.md  DECISIONS.md  DEVELOPMENT_PLAN.md  DEV_LABS_METHODOLOGY.md  GDSCRIPT_AGENT_NOTES.md  GITHUB_FLOW.md  GODOT_OPENSTRIKE_SKILL.md  KNOWLEDGE_BASE.md  LEGAL_ORIGINALITY.md  LOCAL_GOLDSRC_CONFIG.md  MOVEMENT.md  PHASE_4_WEAPON_FOUNDATION_SPEC.md  PUBLIC_OPEN_SOURCE_EXIT_PLAN.md  README.md  RELEASE_POLICY.md  ROADMAP.md  SOURCE_CATALOG.md  TAINTED_LABS_POLICY.md  TAINT_LEDGER.md  TESTING.md  THIRD_PARTY_DEPENDENCIES.md  VIEWMODEL_MANUAL_PREFLIGHT.md  VIEWMODEL_WORLD_PROFILE.md  agent_context_hygiene.md  architecture.md  asset_policy.md  current_context_contract.md  first_vision.md  legal_policy.md  project-status.md  roadmap.md
docs/AGENT_SKILLS/: GODOT_OPENSTRIKE_SKILL.md
docs/adr/: 0000-template.md  0001-clean-room-and-local-resources.md  0002-config-first-resource-roots.md  0003-native-macos-bootstrap-before-final-renderer.md  0004-macos-avfoundation-wav-prototype.md  0004-separate-technical-and-playable-map-modes.md  0005-reuse-debug-bsp-viewer-for-sandbox-mode.md  0006-separate-technical-and-playable-map-modes.md  README.md
docs/archive/: ROADMAP.md
docs/kb/: README.md  SOURCES.md
docs/tasks/: 0001-bootstrap-godot-project.md  0002-local-asset-provider.md  0003-movement-parity-sandbox.md  0004.md  INDEX.md
docs/test_reports/: 2026-06-15_bsp_reader_inventory.md  2026-06-15_bsp_walkable_de_dust2_skybox_audio.md  2026-06-15_pr08d_typed_load_reconciliation.md  2026-06-15_real_bsp_contract_a_de_dust2.md  2026-06-15_tracebackend_map_entity_index.md  2026-06-16_pr09b_bsp_walkable_runtime_snapshot.md
engine/: CMakeLists.txt
engine/assets/: ResourceIndex.cpp  ResourceIndex.h  VirtualFileSystem.cpp  VirtualFileSystem.h
engine/assets/loaders/: BspCollision.cpp  BspCollision.h  BspGeometry.cpp  BspGeometry.h  BspLight.cpp  BspLight.h  BspLoader.cpp  BspLoader.h  BspMesh.cpp  BspMesh.h  BspTypes.h  ModelMetadata.cpp  ModelMetadata.h  SpriteMetadata.cpp  SpriteMetadata.h  TexturePackage.cpp  TexturePackage.h  WaveAudio.cpp  WaveAudio.h
engine/config/: Config.cpp  Config.h  ConfigPaths.cpp  ConfigPaths.h
engine/core/: Log.cpp  Log.h
engine/game/: FirstPersonBspRunner.cpp  FirstPersonBspRunner.h  FirstPersonBspRunner.mm  FirstPersonCamera.h  LocalSandbox.cpp  LocalSandbox.h  SpawnParser.h
engine/input/: InputState.cpp  InputState.h  PlayerCommand.cpp  PlayerCommand.h
engine/physics/: PlayerMovement.cpp  PlayerMovement.h
engine/platform/: HeadlessWindow.cpp  Window.h
engine/platform/macos/: MacWindow.mm
scenes/app/: Main.tscn
scripts/: bootstrap_gdextensions.sh  check_no_forbidden_assets.sh  check_taint_scope.sh  run_smoke_checks.sh
src/core/: logging.gd
src/core/assets/: asset_diagnostics.gd  asset_diagnostics.gd.uid  asset_inspection_report.gd  asset_inspection_report.gd.uid  asset_manager.gd  asset_manager.gd.uid  asset_manifest.gd  asset_manifest.gd.uid  asset_provider_result.gd  asset_provider_result.gd.uid  asset_reference.gd  asset_reference.gd.uid  goldsrc_asset_provider.gd  goldsrc_asset_provider.gd.uid  goldsrc_local_config.gd  goldsrc_local_config.gd.uid  goldsrc_vfs.gd  goldsrc_vfs.gd.uid
src/core/bsp/: bsp_binary_reader.gd  bsp_clipnode_trace_backend.gd  bsp_collision_lumps.gd  bsp_lump_table.gd  bsp_map_resource.gd  bsp_reader_diagnostic.gd
src/core/collision/: godot_scene_trace_backend.gd  openstrike_collision_hull.gd  openstrike_collision_trace.gd  openstrike_trace_backend.gd
src/core/config/: bind_registry.gd  bind_registry.gd.uid  config.gd  config_loader.gd  config_loader.gd.uid  cvar_registry.gd  cvar_registry.gd.uid
src/core/diagnostics/: diagnostics.gd
src/core/maps/: goldsrc_bsp_runtime_provider.gd  goldsrc_bsp_runtime_provider.gd.uid  map_entity_index.gd
src/core/units/: viewmodel_world_profile.gd  viewmodel_world_profile.gd.uid
src/dev/bootstrap/: bootstrap_screen.gd
src/dev/smoke/: asset_catalog_smoke.gd  asset_catalog_smoke.gd.uid  asset_manifest_inspection_smoke.gd  asset_manifest_inspection_smoke.gd.uid  asset_provider_smoke.gd  asset_provider_smoke.gd.uid  asset_vfs_smoke.gd  asset_vfs_smoke.gd.uid  bsp30_clipnode_trace_smoke.gd  coverage_status_smoke.gd  coverage_status_smoke.gd.uid  cvar_config_smoke.gd  cvar_config_smoke.gd.uid  goldsrc_bsp_runtime_provider_smoke.gd  goldsrc_bsp_runtime_provider_smoke.gd.uid  local_game_session_smoke.gd  (+17 more)
tests/: CMakeLists.txt  config_vfs_tests.cpp  test_bsp_collision.cpp  test_bsp_light.cpp  test_config_vfs.cpp  test_first_person_camera.cpp  test_input_mapping.cpp  test_model_metadata.cpp  test_parse_spawn.cpp  test_player_movement.cpp  test_sprite_metadata.cpp  test_texture_package.cpp  test_wave_audio.cpp
tools/asset_audit/: CMakeLists.txt  asset_audit.py
tools/bspdump/: CMakeLists.txt  main.cpp
tools/bsptrace/: CMakeLists.txt  main.cpp
tools/bspview/: BspViewRunner.h  BspViewRunner.mm  CMakeLists.txt  main.mm  navigation-notes.tmp
tools/modeldump/: CMakeLists.txt  main.cpp
tools/playermove/: CMakeLists.txt  main.cpp
tools/spritedump/: CMakeLists.txt  main.cpp
tools/texturepkgdump/: CMakeLists.txt  main.cpp
tools/wavplay/: CMakeLists.txt  Playback.h  PlaybackMac.mm  PlaybackStub.cpp  main.cpp
(+43 files in other folders)
